# Arabic-Text-Summarizer

./: .env.example  .gitignore  Makefile  README.md  hello.py  pyproject.toml
config/: app_config.json
notebooks/: Model-Evaluation.ipynb  Preprocessing_EDA.ipynb
src/fine_tunning/: config.yaml  dataset.py  decoder_tunning.py  model.py
src/inference/: config.yaml  decoder_infer.py
src/utility/: formater.py  settings.py  utils.py
tests/: locust_test.py  test_inference.py
