[project]
name = "arabic-text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "datasets>=2.19.1",
    "lightning>=2.4.0",
    "pandas>=2.2.3",
    "peft>=0.13.1",
    "pydantic-settings>=2.5.2",
    "pyyaml>=6.0.2",
    "requests==2.28.1",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.2",
    "uvicorn==0.18.3",
    "wandb>=0.18.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
]
